--- a/FSvBSCustomCloneUtility/FSvBSCustomCloneUtility.csproj
+++ b/FSvBSCustomCloneUtility/FSvBSCustomCloneUtility.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="AdonisUI" Version="1.17.1" />
     <PackageReference Include="AdonisUI.ClassicTheme" Version="1.17.1" />
     <PackageReference Include="FontAwesome5" Version="2.1.6" />
+    <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.4" />
   </ItemGroup>
 
   <ItemGroup>
