Refactor code to implement a MVVM architecture with Caliburn.Micro

--- a/FSvBSCustomCloneUtility/FSvBSCustomCloneUtility.csproj
+++ b/FSvBSCustomCloneUtility/FSvBSCustomCloneUtility.csproj
@@ -14,6 +14,8 @@
   <ItemGroup>
     <PackageReference Include="AdonisUI" Version="1.17.1" />
     <PackageReference Include="AdonisUI.ClassicTheme" Version="1.17.1" />
+    <PackageReference Include="Caliburn.Micro" Version="4.0.173" />
+    <PackageReference Include="Caliburn.Micro.Core" Version="4.0.173" />
     <PackageReference Include="FontAwesome5" Version="2.1.6" />
     <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.4" />
   </ItemGroup>
@@ -25,6 +27,10 @@
   <ItemGroup>
     <Resource Include="images\logo.png" />
     <Resource Include="images\main_banner.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
