Create basic MessageBox and replace all uses for it. Add test icon

--- a/FSvBSCustomCloneUtility/FSvBSCustomCloneUtility.csproj
+++ b/FSvBSCustomCloneUtility/FSvBSCustomCloneUtility.csproj
@@ -4,11 +4,16 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>images\icon.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
     <None Remove="images\logo.png" />
     <None Remove="images\main_banner.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="images\icon.ico" />
   </ItemGroup>
 
   <ItemGroup>
